Revision history for Mojolicious-Plugin-AssetPack

0.14
       * Add ::Preprocessors->map_type() method.
       * Add support for .sass files
       * Add support for sass+compass

0.13     Mon Jun  9 16:11:57 2014
       * Fix including online assets without extension
       * Fix Use of uninitialized value $_[3] in concatenation

0.12     Thu May 22 21:39:43 2014
       * Allow asset moniker with same name as expanded packed filename.

0.11     Thu May  8 19:13:41 2014
       * Add CoffeScript support. (Alexander Rymasheusky)
         https://github.com/jhthorsen/mojolicious-plugin-assetpack/pull/7
       * Add -I<path_to_dir> to sass command line (Per Edin)
         https://github.com/jhthorsen/mojolicious-plugin-assetpack/pull/5
       * Add support for MOJO_ASSETPACK_NO_CACHE=1 (Alexander Rymasheusky)
         https://github.com/jhthorsen/mojolicious-plugin-assetpack/pull/9

0.10     Thu May  8 19:09:00 2014
       * See 0.11

0.09     Sun Mar 23 11:45:03 2014
       * Remove option for cleaning up old asset files

0.08     Sat Mar 22 19:14:00 2014
       * Fix finding compiled files by MD5 sum

0.07     Sun Mar 16 12:07:46 2014
       * Add support for fetching assets from web
       * Improved support for finding a writeable out_dir

0.0601   Mon Dec 30 17:01:20 2013
       * Fix bug when asset has the same moniker as one of the source files

0.06     Tue Dec 17 20:16:24 2013
       * Will not die, but log with custom error message on missing preprocessor

0.0502   Wed Nov 27 09:21:33 2013
       * Fix plan in t/expand.t when sass is missing

0.0501   Tue Nov 26 09:43:06 2013
       * Cannot define assets when missing preprocessors

0.05     Sun Nov 24 18:20:11 2013
       * Bundling JavaScript::Minifier::XS and CSS::Minifier::XS
       * Will calculate md5_sum from input files
       * Add support for getting assets for a moniker

0.0402   Tue Nov 12 21:17:34 2013
       * Will select the latest processed file when preprocessor is missing
